# confab

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRDPARTY.toml  build.rs  deny.toml  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  test.yml
doc/: confab.1
examples/: debug-server.rs  demo-server.rs
src/: codec.rs  errors.rs  events.rs  input.rs  json.rs  main.rs  native_tls.rs  runner.rs  rustls.rs  tls.rs  util.rs
src/tls/: native_tls.rs  rustls.rs
tests/: cli.rs
