[package]
name = "confab"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
description = "Asynchronous line-oriented interactive TCP client"
authors = ["John Thorvald Wodder II <confab@varonathe.org>"]
repository = "https://github.com/jwodder/confab"
documentation = "https://github.com/jwodder/confab"
license = "MIT"
keywords = ["tcp", "client", "chat"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["/.*"]

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
cfg-if = "1.0.0"
clap = { version = "4.3.4", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
crossterm = "0.26.1"
futures = "0.3.28"
itertools = "0.10.5"
native-tls = { version = "0.2.11", optional = true }
openssl = { version = "0.10.54", optional = true }
rustls-native-certs = { version = "0.6.3", optional = true }
rustyline-async = "0.3.2"
time = { version = "0.3.22", default-features = false, features = ["std", "local-offset", "macros", "formatting"] }
tokio = { version = "1.28.2", features = ["macros", "net", "rt", "rt-multi-thread"] }
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-rustls = { version = "0.24.1", optional = true }
tokio-util = { version = "0.7.8", features = ["codec"] }
unicode-general-category = "0.6.0"

[dev-dependencies]
assert_matches = "1.5.0"
expectrl = { version = "0.7.0", features = ["async"] }
rstest = { version = "0.17.0", default-features = false }
serde = { version = "1.0.164", features = ["derive"] }
serde-jsonlines = "0.4.0"
serde_json = "1.0.97"
tempfile = "3.6.0"
time = { version = "0.3.22", default-features = false, features = ["serde-human-readable"] }
tokio = { version = "1.28.2", features = ["io-util", "sync", "time"] }
tokio-stream = { version = "0.1.14", features = ["time"] }

[features]
default = ["rustls"]
rustls = ["dep:tokio-rustls", "dep:rustls-native-certs"]
native = ["dep:native-tls", "dep:tokio-native-tls"]
vendored-openssl = ["native", "openssl/vendored"]

[profile.release]
lto = true
strip = true

[profile.dist]
inherits = "release"

[workspace.metadata.dist]
cargo-dist-version = "0.0.6"
rust-toolchain-version = "stable"
ci = ["github"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu"]
installers = ["shell", "powershell"]
include = ["THIRDPARTY.toml", "doc/confab.1"]

[build-dependencies]
anyhow = "1.0.71"
cargo_metadata = "0.15.4"
semver = "1.0.17"
time = { version = "0.3.22", default-features = false, features = ["std", "formatting"] }
