[package]
name = "confab"
version = "0.3.0-dev"
edition = "2021"
rust-version = "1.70"
description = "Asynchronous line-oriented interactive TCP client"
authors = ["John Thorvald Wodder II <confab@varonathe.org>"]
repository = "https://github.com/jwodder/confab"
documentation = "https://github.com/jwodder/confab"
license = "MIT"
keywords = ["tcp", "client", "chat"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["/.*"]

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
cfg-if = "1.0.0"
clap = { version = "4.4.8", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
crossterm = "0.27.0"
futures = "0.3.29"
itertools = "0.12.0"
native-tls = { version = "0.2.11", optional = true }
openssl = { version = "0.10.59", optional = true }
rustls-native-certs = { version = "0.6.3", optional = true }
rustyline-async = "0.4.0"
time = { version = "0.3.30", default-features = false, features = ["std", "local-offset", "macros", "formatting"] }
tokio = { version = "1.34.0", features = ["macros", "net", "rt", "rt-multi-thread"] }
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-rustls = { version = "0.24.1", optional = true }
tokio-util = { version = "0.7.10", features = ["codec"] }
unicode-general-category = "0.6.0"

[features]
default = ["rustls"]
rustls = ["dep:tokio-rustls", "dep:rustls-native-certs"]
native = ["dep:native-tls", "dep:tokio-native-tls"]
vendored-openssl = ["native", "openssl/vendored"]

[dev-dependencies]
assert_matches = "1.5.0"
expectrl = { version = "0.7.1", features = ["async"] }
regex = "1.8.1"
rstest = { version = "0.18.2", default-features = false }
serde = { version = "1.0.190", features = ["derive"] }
serde-jsonlines = "0.4.0"
serde_json = "1.0.108"
tempfile = "3.8.1"
time = { version = "0.3.30", default-features = false, features = ["serde", "parsing"] }
tokio = { version = "1.34.0", features = ["io-util", "sync", "time"] }
tokio-stream = { version = "0.1.14", features = ["time"] }

[build-dependencies]
anyhow = "1.0.75"
cargo_metadata = "0.18.1"
semver = "1.0.20"
time = { version = "0.3.30", default-features = false, features = ["std", "formatting"] }

[profile.release]
lto = true
strip = true

[profile.dist]
inherits = "release"

[workspace.metadata.dist]
cargo-dist-version = "0.4.2"
ci = ["github"]
include = ["THIRDPARTY.toml", "doc/confab.1"]
installers = ["shell", "powershell"]
pr-run-mode = "upload"
rust-toolchain-version = "stable"
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
